Частично перевёл на русский язык. Разбил представление левого сайдбара.

--- a/WebStore/Views/Home/CheckOut.cshtml
+++ b/WebStore/Views/Home/CheckOut.cshtml
@@ -15,13 +15,13 @@
             <p>Checkout options</p>
             <ul class="nav">
                 <li>
-                    <label><input type="checkbox"> Register Account</label>
+                    <label><input type="checkbox">Зарегистрировать аккаунт</label>
                 </li>
                 <li>
                     <label><input type="checkbox"> Guest Checkout</label>
                 </li>
                 <li>
-                    <a href=""><i class="fa fa-times"></i>Cancel</a>
+                    <a href=""><i class="fa fa-times"></i>Отмкна</a>
                 </li>
             </ul>
         </div><!--/checkout-options-->
@@ -42,7 +42,7 @@
                             <input type="password" placeholder="Confirm password">
                         </form>
                         <a class="btn btn-primary" href="">Get Quotes</a>
-                        <a class="btn btn-primary" href="">Continue</a>
+                        <a class="btn btn-primary" href="">Продолжить</a>
                     </div>
                 </div>
                 <div class="col-sm-5 clearfix">
@@ -64,26 +64,26 @@
                             <form>
                                 <input type="text" placeholder="Zip / Postal Code *">
                                 <select>
-                                    <option>-- Country --</option>
-                                    <option>United States</option>
-                                    <option>Bangladesh</option>
-                                    <option>UK</option>
-                                    <option>India</option>
-                                    <option>Pakistan</option>
-                                    <option>Ucrane</option>
-                                    <option>Canada</option>
-                                    <option>Dubai</option>
+                                    <option>-- Страна --</option>
+                                    <option>США</option>
+                                    <option>Бангладеш</option>
+                                    <option>Великобритания</option>
+                                    <option>Индия</option>
+                                    <option>Пакистан</option>
+                                    <option>Украина</option>
+                                    <option>Канада</option>
+                                    <option>Дубаи</option>
                                 </select>
                                 <select>
-                                    <option>-- State / Province / Region --</option>
-                                    <option>United States</option>
-                                    <option>Bangladesh</option>
-                                    <option>UK</option>
-                                    <option>India</option>
-                                    <option>Pakistan</option>
-                                    <option>Ucrane</option>
-                                    <option>Canada</option>
-                                    <option>Dubai</option>
+                                    <option>-- Штат / Провинция / Регион --</option>
+                                    <option>США</option>
+                                    <option>Бангладеш</option>
+                                    <option>Великобритания</option>
+                                    <option>Индия</option>
+                                    <option>Пакистан</option>
+                                    <option>Украина</option>
+                                    <option>Канада</option>
+                                    <option>Дубаи</option>
                                 </select>
                                 <input type="password" placeholder="Confirm password">
                                 <input type="text" placeholder="Phone *">
@@ -96,25 +96,25 @@
                 <div class="col-sm-4">
                     <div class="order-message">
                         <p>Shipping Order</p>
-                        <textarea name="message" placeholder="Notes about your order, Special Notes for Delivery" rows="16"></textarea>
+                        <textarea name="message" placeholder="Заметки о Вашем заказе, заметки по доствке" rows="16"></textarea>
                         <label><input type="checkbox"> Shipping to bill address</label>
                     </div>
                 </div>
             </div>
         </div>
         <div class="review-payment">
-            <h2>Review & Payment</h2>
+            <h2>Страничка оплаты</h2>
         </div>
 
         <div class="table-responsive cart_info">
             <table class="table table-condensed">
                 <thead>
                     <tr class="cart_menu">
-                        <td class="image">Item</td>
+                        <td class="image">Предмет</td>
                         <td class="description"></td>
-                        <td class="price">Price</td>
-                        <td class="quantity">Quantity</td>
-                        <td class="total">Total</td>
+                        <td class="price">Цена</td>
+                        <td class="quantity">Колличество</td>
+                        <td class="total">Всего</td>
                         <td></td>
                     </tr>
                 </thead>
