--- a/WebStore/Views/Home/ContactUs.cshtml
+++ b/WebStore/Views/Home/ContactUs.cshtml
@@ -2,7 +2,7 @@
     <div class="bg">
         <div class="row">
             <div class="col-sm-12">
-                <h2 class="title text-center">Contact <strong>Us</strong></h2>
+                <h2 class="title text-center">Напишите <strong>Нам</strong></h2>
                 <div id="gmap" class="contact-map">
                 </div>
             </div>
@@ -33,7 +33,7 @@
             </div>
             <div class="col-sm-4">
                 <div class="contact-info">
-                    <h2 class="title text-center">Contact Info</h2>
+                    <h2 class="title text-center">Контактная информация</h2>
                     <address>
                         <p>E-Shopper Inc.</p>
                         <p>935 W. Webster Ave New Streets Chicago, IL 60614, NY</p>
