--- a/WebStore/Views/Home/Cart.cshtml
+++ b/WebStore/Views/Home/Cart.cshtml
@@ -10,11 +10,11 @@
             <table class="table table-condensed">
                 <thead>
                     <tr class="cart_menu">
-                        <td class="image">Item</td>
+                        <td class="image">Предмет</td>
                         <td class="description"></td>
-                        <td class="price">Price</td>
-                        <td class="quantity">Quantity</td>
-                        <td class="total">Total</td>
+                        <td class="price">Цена</td>
+                        <td class="quantity">Колличество</td>
+                        <td class="total">Всего</td>
                         <td></td>
                     </tr>
                 </thead>
@@ -104,7 +104,7 @@
 <section id="do_action">
     <div class="container">
         <div class="heading">
-            <h3>What would you like to do next?</h3>
+            <h3>Что будете делать дальше?</h3>
             <p>Choose if you have a discount code or reward points you want to use or would like to estimate your delivery cost.</p>
         </div>
         <div class="row">
@@ -113,11 +113,11 @@
                     <ul class="user_option">
                         <li>
                             <input type="checkbox">
-                            <label>Use Coupon Code</label>
+                            <label>Использовать купон</label>
                         </li>
                         <li>
                             <input type="checkbox">
-                            <label>Use Gift Voucher</label>
+                            <label>Использовать подарочный сертификат</label>
                         </li>
                         <li>
                             <input type="checkbox">
@@ -126,30 +126,30 @@
                     </ul>
                     <ul class="user_info">
                         <li class="single_field">
-                            <label>Country:</label>
+                            <label>Страна:</label>
                             <select>
-                                <option>United States</option>
-                                <option>Bangladesh</option>
-                                <option>UK</option>
-                                <option>India</option>
-                                <option>Pakistan</option>
-                                <option>Ucrane</option>
-                                <option>Canada</option>
-                                <option>Dubai</option>
+                                <option>США</option>
+                                <option>Бангладеш</option>
+                                <option>Великобритания</option>
+                                <option>Индия</option>
+                                <option>Пакистан</option>
+                                <option>Украина</option>
+                                <option>Канада</option>
+                                <option>Дубаи</option>
                             </select>
 
                         </li>
                         <li class="single_field">
-                            <label>Region / State:</label>
+                            <label>Регион / Штат:</label>
                             <select>
-                                <option>Select</option>
-                                <option>Dhaka</option>
-                                <option>London</option>
-                                <option>Dillih</option>
-                                <option>Lahore</option>
-                                <option>Alaska</option>
-                                <option>Canada</option>
-                                <option>Dubai</option>
+                                <option>США</option>
+                                <option>Бангладеш</option>
+                                <option>Великобритания</option>
+                                <option>Индия</option>
+                                <option>Пакистан</option>
+                                <option>Украина</option>
+                                <option>Канада</option>
+                                <option>Дубаи</option>
                             </select>
 
                         </li>
@@ -159,7 +159,7 @@
                         </li>
                     </ul>
                     <a class="btn btn-default update" href="">Get Quotes</a>
-                    <a class="btn btn-default check_out" href="">Continue</a>
+                    <a class="btn btn-default check_out" href="">Продолжить</a>
                 </div>
             </div>
             <div class="col-sm-6">
