--- a/WebStore/Views/Home/Error404.cshtml
+++ b/WebStore/Views/Home/Error404.cshtml
@@ -5,8 +5,8 @@
     </div>
     <div class="content-404">
         <img src="~/images/404/404.png" class="img-responsive" alt="" />
-        <h1><b>OPPS!</b> We Couldn’t Find this Page</h1>
-        <p>Uh... So it looks like you brock something. The page you are looking for has up and Vanished.</p>
+        <h1><b>Упс!</b> Мы не нашли страницу...</h1>
+        @*<p>Uh... So it looks like you brock something. The page you are looking for has up and Vanished.</p>*@
         <h2><a asp-controller="Home" asp-action="Index">Верните меня на главную</a></h2>
     </div>
 </div>
