--- a/WebStore/Views/Home/Login.cshtml
+++ b/WebStore/Views/Home/Login.cshtml
@@ -5,25 +5,25 @@
             <div class="col-sm-4 col-sm-offset-1">
                 <div class="login-form">
                     <!--login form-->
-                    <h2>Login to your account</h2>
+                    <h2>Войдите в аккаунт</h2>
                     <form action="#">
                         <input type="text" placeholder="Name" />
                         <input type="email" placeholder="Email Address" />
                         <span>
                             <input type="checkbox" class="checkbox">
-                            Keep me signed in
+                            Сохранить состояние входа
                         </span>
-                        <button type="submit" class="btn btn-default">Login</button>
+                        <button type="submit" class="btn btn-default">Вход</button>
                     </form>
                 </div><!--/login form-->
             </div>
             <div class="col-sm-1">
-                <h2 class="or">OR</h2>
+                <h2 class="or">Или</h2>
             </div>
             <div class="col-sm-4">
                 <div class="signup-form">
                     <!--sign up form-->
-                    <h2>New User Signup!</h2>
+                    <h2>Регистрация:</h2>
                     <form action="#">
                         <input type="text" placeholder="Name" />
                         <input type="email" placeholder="Email Address" />
