Повторил всё, что делали на 3 занятии.

--- a/WebStore/Views/Employees/Index.cshtml
+++ b/WebStore/Views/Employees/Index.cshtml
@@ -1,12 +1,15 @@
-﻿@model IEnumerable<Employee>
+﻿@model IEnumerable<EmployeeViewModel>
 
 @{
+    //ViewData["Title"] = "Сотрудники";
     ViewBag.Title = "Сотрудники";
 }
 
 <div class="container">
     <h3>@ViewData["Title"]</h3>
 
+    <a asp-action="Edit" class="btn btn-success">Создать через Edit</a>
+    <a asp-action="Create" class="btn btn-success">Создать через Create</a>
     <hr />
 
     <table class="table table-bordered" id="employees-table">
@@ -18,6 +21,8 @@
                 <th>Отчество</th>
                 <th>Возраст</th>
                 <th></th>
+                <th></th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
@@ -25,12 +30,18 @@
             {
                 <tr>
                     <td>@employee.Id</td>
-                    <td>@employee.SurName</td>
-                    <td>@employee.FirstName</td>
+                    <td>@employee.SecondName</td>
+                    <td>@employee.Name</td>
                     <td>@employee.Patronymic</td>
                     <td>@employee.Age</td>
                     <td>
                         <a asp-controller="Employees" asp-action="Details" asp-route-Id="@employee.Id">Карточка</a>
+                    </td>
+                    <td>
+                        <a asp-controller="Employees" asp-action="Edit" asp-route-Id="@employee.Id">Edit</a>
+                    </td>
+                    <td>
+                        <a asp-controller="Employees" asp-action="Delete" asp-route-Id="@employee.Id" class="text-danger">Delete</a>
                     </td>
                 </tr>
             }
