--- a/WebStore/Views/Home/Partial/_LeftSideBar.cshtml
+++ b/WebStore/Views/Home/Partial/_LeftSideBar.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="left-sidebar">
     <h2>Category</h2>
-    <partial name="Partial/_CategoryProducts" />
+    <vc:sections />
 
     <partial name="Partial/_BrandProducts" />
 
