--- a/WebStore/Views/Employees/Index.cshtml
+++ b/WebStore/Views/Employees/Index.cshtml
@@ -5,46 +5,56 @@
     ViewBag.Title = "Сотрудники";
 }
 
-<div class="container">
-    <h3>@ViewData["Title"]</h3>
+    <div class="container">
+        <h3>@ViewData["Title"]</h3>
 
-    <a asp-action="Edit" class="btn btn-success">Создать через Edit</a>
-    <a asp-action="Create" class="btn btn-success">Создать через Create</a>
-    <hr />
+        @if (User.IsInRole(WebStore.Domian.Entities.Identity.Role.Administrator))
+        {
+            <a asp-action="Edit" class="btn btn-success">Создать через Edit</a>
+            <a asp-action="Create" class="btn btn-success">Создать через Create</a>
+        }
 
-    <table class="table table-bordered" id="employees-table">
-        <thead>
-            <tr>
-                <th>id</th>
-                <th>Фамилия</th>
-                <th>Имя</th>
-                <th>Отчество</th>
-                <th>Возраст</th>
-                <th></th>
-                <th></th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var employee in Model)
-            {
+        <hr />
+
+        <table class="table table-bordered" id="employees-table">
+            <thead>
                 <tr>
-                    <td>@employee.Id</td>
-                    <td>@employee.SecondName</td>
-                    <td>@employee.Name</td>
-                    <td>@employee.Patronymic</td>
-                    <td>@employee.Age</td>
-                    <td>
-                        <a asp-controller="Employees" asp-action="Details" asp-route-Id="@employee.Id">Карточка</a>
-                    </td>
-                    <td>
-                        <a asp-controller="Employees" asp-action="Edit" asp-route-Id="@employee.Id">Edit</a>
-                    </td>
-                    <td>
-                        <a asp-controller="Employees" asp-action="Delete" asp-route-Id="@employee.Id" class="text-danger">Delete</a>
-                    </td>
+                    <th>id</th>
+                    <th>Фамилия</th>
+                    <th>Имя</th>
+                    <th>Отчество</th>
+                    <th>Возраст</th>
+                    <th></th>
+                    @if (User.IsInRole(WebStore.Domian.Entities.Identity.Role.Administrator))
+                    {
+                        <th></th>
+                        <th></th>
+                    }
                 </tr>
-            }
-        </tbody>
-    </table>
-</div>
+            </thead>
+            <tbody>
+                @foreach (var employee in Model)
+                {
+                    <tr>
+                        <td>@employee.Id</td>
+                        <td>@employee.SecondName</td>
+                        <td>@employee.Name</td>
+                        <td>@employee.Patronymic</td>
+                        <td>@employee.Age</td>
+                        <td>
+                            <a asp-controller="Employees" asp-action="Details" asp-route-Id="@employee.Id">Карточка</a>
+                        </td>
+                        @if (User.IsInRole(WebStore.Domian.Entities.Identity.Role.Administrator))
+                        {
+                            <td>
+                                <a asp-controller="Employees" asp-action="Edit" asp-route-Id="@employee.Id">Edit</a>
+                            </td>
+                            <td>
+                                <a asp-controller="Employees" asp-action="Delete" asp-route-Id="@employee.Id" class="text-danger">Delete</a>
+                            </td>
+                        }
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
