--- a/WebStore/Views/Shared/Components/UserInfo/UserInfo.cshtml
+++ b/WebStore/Views/Shared/Components/UserInfo/UserInfo.cshtml
@@ -1,5 +1,11 @@
 ﻿<div class="shop-menu pull-right">
     <ul class="nav navbar-nav">
+
+        @if (User.IsInRole(WebStore.Domian.Entities.Identity.Role.Administrator))
+        {
+            <li><a asp-area="Admin" asp-controller="Home" asp-action="Index"><i class="fa fa-key"></i> Админка</a></li>
+        }
+
         <li><a href="#"><i class="fa fa-star"></i> Желания</a></li>
         <li><a asp-controller="Cart" asp-action="Details"><i class="fa fa-shopping-cart"></i> Корзина</a></li>
         <li><a asp-controller="Account" asp-action="Profile"><i class="fa fa-user"></i> @User.Identity.Name</a></li>
