Добавление DTO, перенос сервисов в WebAPi

--- a/UI/WebStore/Views/Account/Login.cshtml
+++ b/UI/WebStore/Views/Account/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model LoginViewModel
+﻿@model WebStore.Domian.ViewModels.Identity.LoginViewModel
 @{
     ViewData["Title"] = "Вход в систему";
 }
