--- a/UI/WebStore/Views/Employees/Edit.cshtml
+++ b/UI/WebStore/Views/Employees/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model EmployeeViewModel
+﻿@model WebStore.Domian.ViewModels.EmployeeViewModel
 
 @{
     ViewData["Title"] = "Редактирование сотрудника id:" + Model.Id;
