--- a/UI/WebStore/Views/Catalog/Shop.cshtml
+++ b/UI/WebStore/Views/Catalog/Shop.cshtml
@@ -1,4 +1,4 @@
-﻿@model CatalogViewModel
+﻿@model WebStore.Domian.ViewModels.CatalogViewModel
 
 <section id="advertisement">
     <div class="container">
