--- a/UI/WebStore/Views/Home/Index.cshtml
+++ b/UI/WebStore/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@using WebStore.Interfaces.Services
+﻿@using WebStore.Domian.Entities
+@using WebStore.Interfaces.Services
+@using WebStore.Services.Mapping
 <partial name="Partial/_Slider" />
 
 <section>
@@ -10,25 +12,14 @@
             </div>
 
             <div class="col-sm-9 padding-right">
-              
-                @inject IProductData cataog;
-                @{ 
-                    var products = cataog.GetProducts().Select(p => new ProductViewModel
-                    {
-                        Id = p.Id,
-                        Name = p.Name,
-                        Order = p.Order,
-                        ImageUrl = p.ImageUrl,
-                        Price = p.Price
-                    });
-                    
-                }
 
-                <partial name="Partial/_FeaturesItems" model="@products"/>
+                @inject IProductData catalog;
 
-                <partial name="Partial/_CategoryTab"/>
+                <partial name="Partial/_FeaturesItems" model="@catalog.GetProducts().Select(p => p.FromDTO()).ToView()"/>
 
-                <partial name="Partial/_RecomendedItems"/>
+                <partial name="Partial/_CategoryTab" />
+
+                <partial name="Partial/_RecomendedItems" />
             </div>
         </div>
     </div>
