--- a/UI/WebStore/Views/Shared/Components/Sections/Default.cshtml
+++ b/UI/WebStore/Views/Shared/Components/Sections/Default.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WebStore.ViewModels.SectionViewModel>
+﻿@model IEnumerable<WebStore.Domian.ViewModels.SectionViewModel>
 
 <h2>Категории</h2>
 <div class="panel-group category-products" id="accordian">
