--- a/UI/WebStore/Views/_ViewImports.cshtml
+++ b/UI/WebStore/Views/_ViewImports.cshtml
@@ -1,6 +1,6 @@
 ﻿@using WebStore.Models
-@using WebStore.ViewModels
-@using WebStore.ViewModels.Identity
+@using WebStore.Domian.ViewModels
+@using WebStore.Domian.ViewModels.Identity
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, WebStore
