Выполнил всё с 6-го урока, забыл про коммиты...

--- a/UI/WebStore/Views/Catalog/Details.cshtml
+++ b/UI/WebStore/Views/Catalog/Details.cshtml
@@ -1,7 +1,11 @@
-﻿model ProductViewModel
+﻿@model WebStore.Domian.ViewModels.ProductViewModel
 @{
     ViewData["Title"] = $"Товар {Model.Name}";
 }
+
+<div class="container">
+    <vc:bread-crumbs />
+</div>
 
 <section>
     <div class="container">
