--- a/UI/WebStore/Views/Catalog/Shop.cshtml
+++ b/UI/WebStore/Views/Catalog/Shop.cshtml
@@ -1,5 +1,10 @@
 ﻿@model WebStore.Domian.ViewModels.CatalogViewModel
 
+<div class="container">
+    <vc:bread-crumbs />
+</div>
+
+
 <section id="advertisement">
     <div class="container">
         <img src="~/images/shop/advertisement.jpg" alt="" />
