Внесение изменений в интерфейс IProductData

--- a/UI/WebStore/Views/Home/Index.cshtml
+++ b/UI/WebStore/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
 
                 @inject IProductData catalog;
 
-                <partial name="Partial/_FeaturesItems" model="@catalog.GetProducts().Select(p => p.FromDTO()).ToView()"/>
+                <partial name="Partial/_FeaturesItems" model="@catalog.GetProducts().Products.Select(p => p.FromDTO()).ToView()"/>
 
                 <partial name="Partial/_CategoryTab" />
 
