--- a/UI/WebStore/Views/Catalog/Shop.cshtml
+++ b/UI/WebStore/Views/Catalog/Shop.cshtml
@@ -20,13 +20,13 @@
 
             <div class="col-sm-9 padding-right">
                 <partial name="Partial/_FeaturesItems" model="@Model.Products" />
-                
+
                 <div class="col-sm-9 padding-right">
 
                     <div id="catalog-items-container">
-                        <partial name="Partial/_FeaturesItems" model="@Model.Products"/>
+                        <partial name="Partial/_FeaturesItems" model="@Model.Products" />
                     </div>
-                
+
                     <paging page-model="@Model.PageViewModel"
                             page-action="Shop"
                             page-url-SectionId="@Model.SectionId"
@@ -37,3 +37,15 @@
         </div>
     </div>
 </section>
+
+@section Scripts{
+    <script src="~/lib/jquery-loading-overlay/loadingoverlay.min.js"></script>
+    <script src="~/js/Shop/CatalogLogic.js" asp-append-version="true"></script>
+    <script>
+        $(function() {
+            Catalog.init({
+                getUrl: "@Url.Action("GetFilteredItems","Catalog")"
+            });
+        })
+    </script>
+}
