--- a/UI/WebStore/Views/Shared/Partial/_MainMenu.cshtml
+++ b/UI/WebStore/Views/Shared/Partial/_MainMenu.cshtml
@@ -21,6 +21,8 @@
             <a is-active-route asp-controller="WebAPITest" asp-action="Index">Тесты<i class="fa fa-angle-down"></i></a>
             <ul role="menu" class="sub-menu">
                 <li><a is-active-route asp-controller="WebAPITest" asp-action="Index">WebAPI</a></li>
+                <li><a is-active-route asp-controller="AjaxTest" asp-action="Index">Ненавязчивый AJAX</a></li>
+                <li><a is-active-route asp-controller="AjaxTest" asp-action="SignalRTest">SignalR</a></li>
             </ul>
         </li>
     </ul>
